# torch-atlas-ds

./: .dockerignore  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
commands/: test_cmd.py
docs/: FORMAT.md
tests/: common.py  mocks.py  test_write_then_read.py  test_writer.py  test_writer_shard.py
torch_atlas_ds/: __init__.py  atlas.py  writer.py
