[tool.poetry]
name = "torch-atlas-ds"
version = "0.1.0"
description = "A map-style dataset format for PyTorch made for storing large amounts of data."
authors = ["Luca Molinaro"]
readme = "README.md"
packages = [{include = "torch_atlas_ds"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2"
zstandard = ">= 0.20, <1"
numpy = "^1.19"

[tool.poetry.group.dev.dependencies]
torch = "2.3.1"
fire = "^0.7.0"
zstandard = "0.22.0"
pytest = "^8.3.4"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
